# canvas-learning-system

./: .ai-context-template.md  .ai-context.md  .bmad-prompt.txt  .claude-launcher.ps1  .claude-prompt-temp.txt  .claude-prompt.txt  .coverage  .dev-result.json  .dockerignore  .env  .env.example  .gitattributes  .gitignore  .nvmrc  .pre-commit-config.yaml  .qa-result-13.1.json  .qa-result-13.7.json  .repomixignore  .sm-result.json  .worktree-result.json  .worktree-status.yaml  =7.0  CANVAS_ERROR_LOG.md  CHANGELOG.md  CLAUDE.md  COMMAND-VALIDATION-REPORT.md  CURRENT_TASK.md  ITERATION_VALIDATION_TEST_GUIDE.md  ITERATION_VALIDATION_TEST_RESULTS.md  LICENSE  PLANNING_ITERATION_IMPLEMENTATION_SUMMARY.md  PRD.md  PROGRESS.md  README-BMAD-WORKFLOW.md  README.md  UI 相关设计样式.pen  UsersHeishingAppDataLocalTempwrite-pig.js  UsersHeishingAppDataLocalTempwrite-test-event-bus.js  UsersHeishingAppDataLocalTempwrite-test-fc.js  UsersHeishingAppDataLocalTempwrite-test-pig.js  (+41 more)
.bmad-core/: core-config.yaml  install-manifest.yaml  parallel-dev-config.yaml  sdd-config.yaml
.claude/: .gitignore  PROJECT.md  SNAPSHOT_SYSTEM_README.md  auto-snapshot-20251116024500.md  compact-snapshot-20251117022132.md  compact-snapshot-20251117025704.md  compact-snapshot-20251117082543.md  compact-snapshot-20251117083734.md  compact-snapshot-20251117085231.md  compact-snapshot-20251117091638.md  compact-snapshot-20251117092747.md  compact-snapshot-20251117093903.md  compact-snapshot-20251117094817.md  compact-snapshot-20251117095505.md  compact-snapshot-20251119074436.md  compact-snapshot-20251119163836.md  compact-snapshot-20251119181506.md  compact-snapshot-20251119194212.md  compact-snapshot-20251119204741.md  compact-snapshot-20251119211002.md  compact-snapshot-20251120001511.md  compact-snapshot-20251120020311.md  compact-snapshot-20251120035007.md  compact-snapshot-20251120040517.md  compact-snapshot-20251120052608.md  compact-snapshot-20251120075342.md  compact-snapshot-20251120092703.md  compact-snapshot-20251120191331.md  compact-snapshot-20251120234859.md  compact-snapshot-20251120235004.md  compact-snapshot-20251120235216.md  compact-snapshot-20251120235336.md  compact-snapshot-20251120235433.md  compact-snapshot-20251120235542.md  compact-snapshot-20251120235648.md  compact-snapshot-20251120235750.md  compact-snapshot-20251120235901.md  compact-snapshot-20251121000010.md  compact-snapshot-20251121000118.md  compact-snapshot-20251121000226.md  (+580 more)
.devcontainer/: Dockerfile.claude  init-firewall.sh
.gdr/: append-instruction.py  chatgpt-prompt-bmad-体系审查-起手.md  chatgpt-prompt-graphiti-起手.md  chatgpt-prompt-两白板生产力-起手.md  chatgpt-prompt-起手.md  context_pack.json  file-list-learning-effect-audit.txt  instruction-learning-effect-audit.md  pack-core-loop.py  pack-plan-b-review.py  report.md  (+6 more)
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
(+4889 files in other folders)
