[project]
name = "canvas-learning-system"
version = "1.0.0"
description = "Obsidian Canvas-based AI-assisted learning system using Feynman Learning Method"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Canvas Learning System Team"}
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-bdd>=7.0",
    "schemathesis>=3.0",
    "hypothesis>=6.0",
]
api = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "pydantic>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "bdd: BDD tests that execute Gherkin scenarios via pytest-bdd",
    "contract: Contract tests that validate API against OpenAPI specification",
    "integration: Integration tests requiring external services",
    "unit: Unit tests for individual components",
    "slow: Tests that take significant time to run",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.schemathesis]
# Configuration for Schemathesis contract testing
# Reference: docs/architecture/sot-hierarchy.md (OpenAPI is Level 4 SoT)

# Local schema path (used when FastAPI is not running)
schema_path = "specs/api/canvas-api.openapi.yml"

# Base URL for API testing (Epic 15 FastAPI)
# Uncomment when FastAPI is implemented:
# base_url = "http://localhost:8000"

# Test execution settings
max_examples = 100
hypothesis_deadline = 5000  # ms
validate_schema = true

# Stateful testing for workflow scenarios
stateful = "links"

# Check types
checks = [
    "not_a_server_error",
    "status_code_conformance",
    "content_type_conformance",
    "response_headers_conformance",
    "response_schema_conformance",
]

[tool.ruff]
# Python linting configuration
line-length = 120
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["canvas_learning_system"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
