[package]
name = "canvas-learning-frontend"
version = "0.1.0"
description = "Canvas Learning System - Tauri Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "canvas_learning_frontend_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
